added rbf comparisons

--- a/code/ml_pl/notebooks/Regression ROC (RROC).ipynb
+++ b/code/ml_pl/notebooks/Regression ROC (RROC).ipynb
@@ -2,12 +2,215 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#load y_test, y_pred\n",
+    "with open('SVR_results.csv', 'rb') as f:\n",
+    "    import csv\n",
+    "    cr = csv.reader(f)\n",
+    "    header = cr.next()\n",
+    "    y_true, y_pred = [], []\n",
+    "    for row in cr:\n",
+    "        y_true.append(float(row[1]))\n",
+    "        y_pred.append(float(row[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#put with original inds\n",
+    "y_true_winds = [(ii, y) for ii,y in enumerate(y_true)]\n",
+    "y_pred_winds = [(ii, y) for ii,y in enumerate(y_pred)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#sort\n",
+    "y_pred_winds = sorted(y_pred_winds, key = lambda x: -x[1])\n",
+    "y_true_winds = sorted(y_true_winds, key = lambda x: -x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "30\n",
+      "20\n",
+      "15\n",
+      "12\n",
+      "10\n",
+      "8\n",
+      "7\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#threshold by percentage\n",
+    "total = len(y_true_winds)\n",
+    "pct_list = [10, 20, 30, 40, 50, 60, 70, 80, 90]\n",
+    "acc_list = []\n",
+    "for pct in pct_list:\n",
+    "    num_in_pct = int(total/pct)\n",
+    "    print num_in_pct\n",
+    "    y_true_top = y_true_winds[:num_in_pct]\n",
+    "    y_pred_top = y_pred_winds[:num_in_pct]\n",
+    "\n",
+    "    #get list of indices in top %\n",
+    "    top_true_inds = [x[0] for x in y_true_top]\n",
+    "    top_pred_inds = [x[0] for x in y_pred_top]\n",
+    "\n",
+    "    #get number of TPs\n",
+    "    combined = top_true_inds + top_pred_inds\n",
+    "    TPs = list(set([x for x in combined if combined.count(x)>1]))\n",
+    "    acc = len(TPs)/float(num_in_pct)\n",
+    "    acc_list.append(acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x3b24690>]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXsAAAEACAYAAABS29YJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xe8VOW1//HPAkRjL8SGGMuN3RgsxFgPahSTWPLTm8i1\n3qjBxF6IHbCXWK+9RXNBxU7wiiKgR7EiCII0IUoUEWswiEpdvz/WoOPx9LNn9p7Z3/frdV6emdl7\nZnE8Z80zaz/PeszdERGR6tYu7QBERKT0lOxFRHJAyV5EJAeU7EVEckDJXkQkB5TsRURyoMlkb2Y9\nzGyKmU0zszPrebzGzD43s7GFr/Oae66IiJSHNTbP3szaA1OBvYD3gdeAnu4+ueiYGuA0d9+/peeK\niEh5NDWy7wZMd/cZ7r4QGAgcUM9x1oZzRUSkxJpK9p2B94puzyzcV8yBnczsDTMbYmZbtOBcEREp\ngw5NPN6cXgqvA13c/Usz2xcYBGzS5shERCQxTSX794EuRbe7ECP0b7j73KLvnzSzm81s9cJxjZ4L\nYGZqziMi0gruXl8JvV5NlXFGAz82sw3MrCPwO2Bw8QFmtpaZWeH7bsRF38+ac25RwJn/6tu3b+ox\nKE7FWakxKs7kv1qq0ZG9uy8ysxOAoUB74C53n2xmvQqP3wYcDPzRzBYBXwKHNHZuiyMUEZE2a6qM\ng7s/CTxZ577bir6/CbipueeKiEj5aQVtM9XU1KQdQrMozmRVQpyVECMozrQ1uqiqLAGYedoxiIhU\nGjPDE7xAKyIiVUDJXkQkB5TsRURyQMleRCQHlOxFRHJAyV5EJAeU7EVEckDJXkQkB5TsRURyQMle\nRCQHlOxFRHJAyV5EJAeU7EVEckDJXkQkB5TsRURyQMleRCQHlOxFRHJAyV5EJAeU7EVEckDJXkQk\nB5TsRURyQMleRCQHlOxFRHJAyV5EJAeU7EVEckDJXkQkB5TsRURyQMleRCQHlOxFRHJAyV5EJAeU\n7EVEckDJXkQkB5TsRURyQMleRCQHmkz2ZtbDzKaY2TQzO7OR43Yws0VmdlDRfTPMbLyZjTWzUUkF\nLSIiLdOhsQfNrD1wI7AX8D7wmpkNdvfJ9Rx3BfBUnadwoMbdP0suZBERaammRvbdgOnuPsPdFwID\ngQPqOe5E4GHg43oes7aFKCIibdVUsu8MvFd0e2bhvm+YWWfiDeCWwl1e9LADw81stJkd28ZYRUSk\nlRot4/DdxN2Q64Cz3N3NzPjuSH5nd//AzH4IDDOzKe4+su4T9OvX75vva2pqqKmpacbLiojkR21t\nLbW1ta0+39wbzudmtiPQz917FG6fDSxx9yuKjnmbbxN8J+BL4Fh3H1znufoCX7j71XXu988/d1Ze\nudX/BhGR3DEz3L3ZZfKmyjijgR+b2QZm1hH4HfCdJO7uG7n7hu6+IVG3/6O7Dzaz5c1spUJQKwB7\nAxPqe5GR3xvri4hIkhpN9u6+CDgBGApMAh5w98lm1svMejXx3GsDI81sHPAq8H/u/nR9Bz7zTMsD\nFxGR5mu0jFOWAMy8a1fn9ddTDUNEpKIkXcYpi+nT4TPNxBcRKZlMJPuddoLnnks7ChGR6pWJZL/H\nHqrbi4iUUiaSfffu8OyzaUchIlK9MnGBduFCp1MnmDoV1lor1XBERCpCRV6g7dABdtsN2rA4TERE\nGpGJZA9RylHdXkSkNDKT7PfYQ3V7EZFSyUyy33rrmGs/c2bakYiIVJ/MJPt27aCmRqN7EZFSyEyy\nB03BFBEplUwley2uEhEpjUwl+802g/nz4Z130o5ERKS6ZCrZm2kKpohIKWQq2YPq9iIipZDJZP/M\nM5ByFwcRkaqSuWS/8cbRPuGtt9KORESkemQu2S+t26uUIyKSnMwle9AUTBGRpGWixXHdGN59F7bf\nHmbPjpW1IiLyXRXZ4riu9deHlVeGiRPTjkREpDpkMtmD6vYiIknKbLJX3V5EJDmZrNkDfPABbLkl\nfPwxtG+fQmAiIhlWFTV7gHXWgbXXhnHj0o5ERKTyZTbZg+r2IiJJyXyyV91eRKTtMluzB/jkk2if\n8MknsMwyZQ5MRCTDqqZmD9CpE2ywAYwZk3YkIiKVLdPJHjQFU0QkCZlP9rpIKyLSdpmu2QPMmQNd\nukTdftllyxiYiEiGVVXNHmDVVWNv2ldfTTsSEZHKlflkD6rbi4i0VUUke9XtRUTapslkb2Y9zGyK\nmU0zszMbOW4HM1tkZge19Nym7LJLTL/88svWPoOISL41muzNrD1wI9AD2ALoaWabN3DcFcBTLT23\nOVZcEbbZBl56qTVni4hIUyP7bsB0d5/h7guBgcAB9Rx3IvAw8HErzm0WtU4QEWm9ppJ9Z+C9otsz\nC/d9w8w6E0n8lsJdS+dRNnluS+yxh+r2IiKt1VSyb84k/OuAswqT5a3w1dxzm+3nP4cJE2Du3CSf\nVaSyffEFnHsuvPVW2pFI1nVo4vH3gS5Ft7sQI/Ri2wEDzQygE7CvmS1s5rkA9OvX75vva2pqqKmp\n+d4xP/gB7LADjBwJv/xlE1GL5MRpp8Ug6Lbb4KCDoG9fWHfdtKOSUqitraW2trbV5ze6gtbMOgBT\ngT2BWcAooKe7T27g+LuBx9390eae29QK2mIXXhgj+7/8pVmHi1S1v/8dTj01NvhZtAguvxzuuguO\nPRbOPBNWWy3tCKWUEl1B6+6LgBOAocAk4AF3n2xmvcysV2vObW5g9dHiKpEwezb06gX9+8PKK8Pq\nq8OVV8Ibb8Cnn8Imm8AVV2i6snwr871xii1YAGusAe++q1GL5Jc7/OpXsN12cNFF9R8zZQqcdx68\n8gr06QO//z10aKpoKxWl6nrjFOvYEXbaCZ57Lu1IRNJzyy3w8ceRxBuy2Wbw8MPw6KMwcCBsuWXc\nTnlsJymqqJE9RF3ygw/g+utLGJRIRk2eDLvtBi++GKWa5nCHYcPgrLOgffv4G9pzz9LGKaVX1SN7\nUN1e8mvBAjjsMLj44uYnegAz2HtvGD0azjgDjjsOfvEL7QCXNxWX7LfdFt57Dz76KO1IRMqrX7+Y\nVvmHP7Tu/Hbt4He/g0mTYprmfvvBb3+rOfp5UXHJvkOHaIzWhummIhVn5Ei4++6YWmnN/uBev2WW\nidH9tGnQtWtcB+vVC2bNSiZWyaaKS/ag1gmSL59/DocfDnfcAWuumdzzrrACnH12jOxXWQW23jrq\n+v/6V3KvIdlRkcle/e0lT048EfbdF37969I8v+bo50NFJvtttompZ/rYKdXugQdiS86rrir9a623\nXnx6GDkSXnstkv7tt8fqXKl8FZns27WD3XfX6F6q28yZMaq/994ouZSL5uhXp4pM9qApmFLdliyB\nI4+Ek0+G7bdPJ4Zu3WDECLjhBrj00m9vS2Wq2GSvur1Us+uug/nz44JpmjRHv3pUbLLfYguYNw9m\nzEg7EpFkTZgAl10WTc7at087mqA5+pWvYpO9mUb3Un2+/hoOPTQuyG64YdrRfJ/m6Feuik32oLq9\nVJ9zz4VNN4Ujjkg7ksYtnaM/darm6FeKik72S0f2miUg1WDEiJhqeeutbV8lWy5rrPHtHP1PPtEc\n/Syr6GT/H/8RfxTTpqUdiUjbfPYZHHVUtERYY420o2m59daDO++MOfqjRmmOfhZVdLJX3V6qgXvU\nwQ8+OGa6VLLNNoNHHtEc/Syq6GQPSvZS+QYMiFkul12WdiTJqW+O/siRaUeVbxW3eUld//xn/CLN\nnl05dU6RpWbMgB12gOHDow1INVqyJK5FnHhibJfYqVPaEVWHqt+8pK4f/ShmBkyalHYkIi2zeHF0\nszzrrOpN9BBz9Hv2jHn5l1+edjT5VfHJHjQFUyrTlVfGvPVTT007kvI4//y4AD1zZtqR5FNVJHvV\n7aXSjBkTLRH+9rcY+ebBOuvAMcfEtopSfhVfs4dYvbfVVjHPNy9/OFK5vvwytte84IJoQZAnn34a\ni8ZeeSWmTkvr5a5mD7Ev55prxsIOkazr3TsuyuYt0UOsITjlFOjbN+1I8qcqkj2obi+VYcgQeOIJ\nuPHGtCNJz8knx7TM8ePTjiRfqibZq24vWffRR1Gz/t//jX4yebXSStFX57zz0o4kX6qiZg+xTeGP\nfxx1+w4dEghMJEHucOCB0Zq7mhZPtdbXX0dLhQcegJ//PO1oKlMua/YAP/whrL++NlWQbLrzTnjv\nvbgoK7DcclG3P+cctVIol6pJ9qBSjmTTtGmR1O69Fzp2TDua7DjyyJhJN3x42pHkQ1Ule12klaxZ\nuBAOOwz69YPNN087mmzp0AEuukij+3KpqmS/227w8suwYEHakYiEiy+G1VeHP/0p7Uiy6eCDo23E\nY4+lHUn1q6pkv9pqsWDj1VfTjkQkBh633RYtAtSkr37t2sEll8TMnMWL046mulVVsgfV7SUb5s6N\n8s2tt8Laa6cdTbb16BGLrQYMSDuS6lZ1yV51e8mCU06J38UDD0w7kuwzi573/frB/PlpR1O9qi7Z\n77ILjB4NX32VdiSSV48+Cs8/D9dem3YklWPXXeMC9h13pB1J9aq6ZL/SSvCTn8BLL6UdieTRrFlx\nMbZ/f1hxxbSjqSyXXBJf8+alHUl1ajLZm1kPM5tiZtPM7Mx6Hj/AzN4ws7FmNsbM9ih6bIaZjS88\nNirp4Buiur2kYckS+O//hj/+EXbcMe1oKk/XrjGj7oYb0o6kOjXaLsHM2gNTgb2A94HXgJ7uPrno\nmBXcfV7h+62Bx9z9Pwq33wG2c/fPGnmNRNolFBsxAvr0gRdfTPRpRRp1ww2xcOqFF9Syo7WmTo1S\n7Ftvxew6aVjS7RK6AdPdfYa7LwQGAgcUH7A00ResCHxSN6bmBpOUnXaKdsdffFHuV5a8mjgRLrww\nZpQo0bfeppvCAQfAVVelHUn1aSrZdwbeK7o9s3Dfd5jZgWY2GXgSOKnoIQeGm9loMzu2rcE21w9+\nANttFyMskVKbPz+mWV5+uTbkSEKfPjFldfbstCOpLk0l+2bVV9x9kLtvDuwH9C96aGd37wrsCxxv\nZru2LsyWy+MUzN//XvXONPTpAxtsED9/abv114cjjojpmJKcpj5wvg90KbrdhRjd18vdR5pZBzNb\nw90/dfcPCvd/bGaPEWWhkXXP69ev3zff19TUUFNT0+x/QEO6d4fTT2/z01SMF1+EJ5+EwYNjB6Q1\n10w7onyorY3SzRtvaJVsks4+O6Zinn46/OhHaUeTDbW1tdTW1rb6/KYu0HYgLtDuCcwCRvH9C7Qb\nA2+7u5vZtsBD7r6xmS0PtHf3uWa2AvA0cIG7P13nNRK/QAvx0bpTp2gru+qqiT99pixZEj3BTzoJ\nXnstegPdfHPaUVW/OXNgm22iJUKPHmlHU33OPx9mzox2E/J9Lb1A2+jI3t0XmdkJwFCgPXCXu082\ns16Fx28DDgKOMLOFwBfAIYXT1wYetRjudADurZvoS2nZZWP62/PPw/77l+tV0zFwYHQN7NkT9t03\nLnIdfzxsuWXakVW344+P3y0l+tI444zYkGjyZHUMTULV7FRVn8sugw8/hOuuK8nTZ8JXX8Fmm8WU\nv112ifuuuw6efjr2O5XSuO++6Gg5ejQsv3za0VSvK6+EUaPg4YfTjiR7crtTVX3ysLjq2muhW7dv\nEz3ECs5p02Do0PTiqmbvvhu9bwYMUKIvtRNOiO6ho0enHUnlq+qR/aJF0U1v+vTYtrDazJ4NW20V\nLZ033vi7jw0aFG1jx43TvO8kLV4Me+4Z5bIzv7eeXErhllvg73+Hp55KO5Js0ci+SIcOMeJ97rm0\nIymNPn1ieX7dRA+xMKVTJ/jrX8sfVzW75pq4PnLGGWlHkh9HHx0raqv177hcqnpkD3D11fD223DT\nTSV7iVSMHw+/+EUsL29ottHrr8OvfhXHrLxyeeOrRuPGwd57x4wnTQcsrwEDYoT/wgua4rqURvZ1\ndO9efYur3GP+cZ8+jU8r3XZb2GefWNkpbfPVV3DooXGNRIm+/Hr2hM8/hyeeSDuSylX1I/vFi6Ne\nP3EirLNOyV6mrIYMiWQ/fjwss0zjx77/frR8fv11Jam2OPlk+OijmIWjkWU6/v73GOCMHRvbGead\nRvZ1tG8Pu+9ePbNyFi6MRH/VVU0neoDOneHEE2NForTO0KGxIfbNNyvRp2n//WG55eDBB9OOpDJV\nfbKH6pqCeccdsN568MtfNv+c3r1jcdkrr5Qurmr1ySdxgfBvf1PL3bQt3b7w/PNj0CMtU/VlHIA3\n34zZKf/4R0lfpuTmzInVscOGRWmmJe65B26/PXroaHTaPO5w8MGw0Ubwl7+kHY0stdde0f/p2LL1\n0c0mlXHqseWWMHcu/POfaUfSNpdeGh9lW5roIboIfv01PPRQ8nFVq3vuiTUaF1+cdiRS7JJLYu+A\nPO8zPXduy8/JRbI3q/xSzttvx5z5iy5q3fnt2sU01DPPjKQvjfvHP+DPf442FMsum3Y0UuxnP4Pt\nt4+pmHn0xRctK+MulYtkD5Wf7M86C049FdZeu/XP0b17dGn8n/9JLq5qtGgRHH54rEDeaqu0o5H6\nXHQRXHEF/PvfaUdSXvPmwa9/DZts0vJzc1Gzh1iBt+ee0dek0mrWL74Y84ynTo1duNrirbdi28ZJ\nk9TzviEXXQQjR8byfE3xy67DD4+dwfr2TTuS8vjyS9hvP+jSJT7lt2/fspp9bpK9e8xiee65yto6\nrrhX/aGHJvOcp5yinvcNGTUq/qDGjoV11007GmnM229HE8ApU6I1SDX7+uu4XrfmmjEzrH17XaBt\nkFlsVVhppZziXvVJ6dMnLtROnJjcc1aDL76IvWRvukmJvhJstBH89rfVv0J8/nz4zW+iqeM990Si\nb43cjOwhPvoMGwb331+Wl2uz+nrVJ0U977+vV6/4xKOdkSrHrFlxXWX8+PjkXm3mz4eDDopW2vfd\n990OthrZN2LpyD7l97dmq69XfVLU8/67Bg+OgcD116cdibTEuuvGfPtqnB67YEGsJ+jYMQZ8bW1V\nnquRPcCGG0YzpS22KNtLtkpjveqTop73YfZs6No1dkPaeee0o5GW+vTTWGz4yiuVdT2uMQsXwiGH\nxMywhx6KhF+XRvZNqJQpmI31qk+Ket7Hp7yjj4ZjjlGir1RrrBGTDqplVs6iRTEZY/786ANUX6Jv\njdyN7AcMiKZWjzxStpdsseb0qk9K3nve33JLvNm99FLzGstJNs2dG5uTP/1061aYZ8XSNR5z5kSe\nWm65ho9t6cg+d8l+acvfjz/O5hxq99gg48AD4fjjy/OaRx0Vtc9LLy3P62XFlCmw666xjqE1i1Qk\nW667LvauGDw47UhaZ/Hi+Fv88MNo59zUmhqVcZrQuXOULsaPTzuS+j35JMycCX/4Q/le85JL4Lbb\nKr93UEssWBAflS++WIm+Whx3XFx/evnltCNpuSVLopw4a1ZcS2vr4sn65C7ZQ3br9i3tVZ+UPPa8\nv+CC+DRTzjdVKa3llou6/TnnVM6MO4hE/4c/wIwZ8alk+eVL8zq5TPZ77JHNrQpb06s+KXnqeT9y\nZMylv+uuymudIY078sgYHQ8fnnYkzbNkCfzxj3HN7P/+D1ZYoXSvlbuaPcT2cptsEhtTZGXKYVt6\n1SclDz3vP/8cfvpTuOGGaCgl1efBB2P/gVGjsv177A4nnBCtOYYOhZVWatn5qtk3w5prRjOhsWPT\njuRbbelVn5Q89Lw/6STo0UOJvpodfHDMannssbQjaZh7TBcdMyYa7rU00bdGLpM9RN0+K6Wctvaq\nT0q197x/8MEoU111VdqRSCm1axeDp/POixkuWeMe1+ZeeikSfbmmPOc22WepKVoSveqTUq0972fO\njIvQ995b2rqoZEOPHrHYasCAtCP5LvcYTNXWxpqAUq+jKZbLmj3Av/4FP/pR1O2TWqHWGkn2qk9K\ntfW8X7Ik1i507w7nnpt2NFIuI0dGaXLKlGzsNuYev39DhsCIEfFm1Baq2TfTaqtFH43XXksvhiVL\n4LTT4LLLspPoIS5eH3YY9OuXdiTJuP76KEuddVbakUg57borbL55zHLLgr59Y8bN8OFtT/StkduR\nPcAZZ8Aqq8D556fy8tx3X6z6e+WV7K3m/eyzmB1UWxsbtleqCROiZDdqVDTBk3wZOzamMk+fnm75\n7sIL4YEHonSc1KdljexbIM3FVV99FYuYrrkme4keYPXV4yNn795pR9J6X38dq2SvukqJPq+6doXd\ndouptmm55JLYQ+OZZ9Iti+Z6ZP/vf8cqyk8+abzhUClcemmMOrI8zXHBghjV33gj7LNP2tG03Omn\nx57DDz6Y7fnWUlpTp8aeEG+9FeXbcrriiphpV1sL66yT7HNrZN8CK68cPePL3Utj9uwY0Wd9O7WO\nHWNxyumnx7zlSjJiRHxsvvVWJfq823TTaOdd7im3V18Nd94ZI/qkE31r5DrZQzpTMMvRqz4pldjz\n/rPPonvg3XencyFMsqdPn3jjnz27PK93/fVw882R6Dt3Ls9rNiXXZRyI9gQXXAAvvFCe1ytnr/qk\nVFLPe/fYyq1z59jWUWSpU06JGXClXkNy003xKaK2NqZ3l0riZRwz62FmU8xsmpmdWc/jB5jZG2Y2\n1szGmNkezT03C3beOdqizptX+tdaunKuT5/KSfQA224bNfusl50gFtFMmhTTWUWKnXNOLKorZSvv\nW2+FK6+MEX0pE32ruHuDX0B7YDqwAbAMMA7YvM4xKxR9vzUwvbnnFo7ztO26q/tTT5X+dZ54wn2z\nzdwXLCj9ayVt5kz31Vd3nzEj7Uga9s477p06uY8bl3YkklXnned+1FGlee477nDv0sV9+vTSPH9d\nhdzZaA4v/mpqZN+tkLxnuPtCYCBwQJ03i+Ix8YrAJ809NyvKUbdPq1d9UrLe837x4tjO7ayzot2D\nSH3OOAOeeAImT072ee++OxYhjhiR3WtxTSX7zsB7RbdnFu77DjM70MwmA08CJ7Xk3CwoR1O0NHvV\nJyXLPe+vvDLeRE89Ne1IJMtWWSUSfpILKfv3j6ZrI0bEPrhZ1VQ392ZdOXX3QcAgM9sV6G9mm7Uk\niH5F6/JramqoqalpyelttuOO8U7/+efxy5C0OXPiIvCwYZU9DXCFFWIbv9NOy1bP+zFj4mLsmDHZ\nXKAm2XLCCZGUR4+G7bdv23Pdd180Nhs+PKZ4llJtbS21tbWtf4LGajzAjsBTRbfPBs5s4px/AGs0\n91wyULN3d99zT/fBg0vz3L17ux9zTGmeu9wWL3bv2tX9gQfSjiTMm+e+6abu99+fdiRSSW6+2X2f\nfdr2HAMHuq+9tvuECcnE1FIkXLMfDfzYzDYws47A74Dv7N1uZhubxRjPzLYtZO9Pm3NulpSqdUJW\netUnJWs973v3jtHZIYekHYlUkqOPjhW1zz3XuvMfeQROPjl2mNpqq2RjK5VGk727LwJOAIYCk4AH\n3H2ymfUys16Fww4CJpjZWOB64JDGzi3NP6PtSrUvbZZ61SclKz3vhwyJi2033phuHFJ5OnaM5mSt\n2Zx80CD405/gySfT3VmupXK/qGqphQtjteU77yS36jKLveqTknbP+48+ir1k778fdt+9/K8vlW/x\n4hi0XH5587epfPxxOOaYGGhst11p42uKeuO00jLLRLOk1n6sqyurveqTkmbPe3c49tjYmEKJXlqr\nffuYcHDuufH32pQhQ6L88/jj6Sf61lCyL5LkFMyBAyMp9eyZzPNlUZ8+0bVz4sTyvu6dd0Y3ywsv\nLO/rSvU54IDoePvAA40fN3Ro9FsaPBi6dStLaIlTGafImDExWmxr8vrqK9hss1iavcsuycSWVddd\nF3tpDhlSntebNi3KR889B1tsUZ7XlOo2YgQcd1yUJOtb8Dh8eAzaBg2K9ipZoTJOG/z0pzBrVts7\n4117bbz7V3uih7hQNW1ajHxKbeHCKB317atEL8nZc8/oY3PPPd9/7NlnI9E/8ki2En1raGRfx4EH\nxjS+1k7lmz07pmK9+mp2l00nbdCgWEE4bhx0aGqZXhv07RvbCw4Zkp0FXVIdXn0VDj44Jh4svcb2\n/PNw0EFRqizzOs9m0ci+jdpat6+kXvVJKUfP+5dfhttui9dQopek/exncdH1llvi9osvRqIfODCb\nib41NLKvY/z4+J88bVrrzq20XvVJKWXP+7lzo8R21VXwm98k+9wiS735ZpR0+vePcuGAAbD33mlH\n1bCWjuyV7OtYsgTWWiuSV5cuzT/PPX4xDjwQjj++dPFl2VFHxZ6+l16a7PMefXSM5u+8M9nnFanr\n8MOjbPPoo9lvWqhkn4D//E/Yb7+YmdNcQ4ZEC+Px4yuzhXES3n8/VhS+/npyGzc8+ij8+c9xPWDF\nFZN5TpGGfPxxLKyshOmVqtknoKWtEyq9V31Sku55P2tWzPYZMECJXsrjhz+sjETfGkr29VjaFK25\nHziqoVd9UpLqeb9kSVzoPu64aEEtIm2jMk493GOU+sILsNFGjR87Z070sR42rLKaIpXSPffA7be3\nref9DTfEorSRI/P9aUmkISrjJMCs+VMwL70U9t9fib7YEUdE++OHHmrd+RMnRiuE/v2V6EWSomTf\ngObsS1ttveqT0pae9/Pnx7S3yy7L9hZvIpVGyb4BS0f2jVWYqrFXfVJa2/O+T5+YyXP00aWJSySv\nVLNvgDtsuCE89VQ0NaurmnvVJ6WlPe9ra+G//gveeCNmRYhIw1SzT0hjdftq71WflJb0vJ8zB448\nEu66S4lepBSU7BvR0L60eehVn5Tm9rw//vhYyLbvvuWJSyRvVMZpxHvvQdeusQVeu8LbYp561Sel\nqZ73990XF7nHjIHlly9vbCKVSmWcBHXpAqutFg2SlspTr/qkNNbz/t134ZRT4s1TiV6kdJTsm1Dc\nOmH2bLjmmtigWJqvY0f4y1+ipcSiRd/ev3hxzMk/7TTYdtv04hPJAyX7JhTX7fPYqz4p9fW8v+aa\nuNjdu3d6cYnkhWr2Tfjww6jRP/ss7LNPPnvVJ6W45/3bb0fv/9degw02SDsykcqjFsclsOWWsbLz\n1FPz26uhmuRbAAAGG0lEQVQ+KUcdFddBnn46umMedljaEYlUJiX7EjjxxNhhPs+96pPy/vvRBmH/\n/eH++7XFoEhrKdmXwPvvw7x5sUhI2u6ll2JT9qS3LxTJEyV7EZEc0Dx7ERH5HiV7EZEcULIXEckB\nJXsRkRxQshcRyQElexGRHFCyFxHJASV7EZEcaDLZm1kPM5tiZtPM7Mx6Hj/UzN4ws/Fm9qKZ/aTo\nsRmF+8ea2aikgxcRkeZpNNmbWXvgRqAHsAXQ08w2r3PY28Bu7v4T4CLg9qLHHKhx967u3i25sMuv\ntrY27RCaRXEmqxLirIQYQXGmramRfTdgurvPcPeFwEDggOID3P1ld/+8cPNVYL06z1EVra4q5RdA\ncSarEuKshBhBcaatqWTfGXiv6PbMwn0NORoo3mnUgeFmNtrMjm1diCIi0lYdmni82R3KzKw78Htg\n56K7d3b3D8zsh8AwM5vi7iNbEaeIiLRBo10vzWxHoJ+79yjcPhtY4u5X1DnuJ8CjQA93n97Ac/UF\nvnD3q+vcr5aXIiKt0JKul02N7EcDPzazDYBZwO+AnsUHmNn6RKI/rDjRm9nyQHt3n2tmKwB7Axe0\nJVgREWmdRpO9uy8ysxOAoUB74C53n2xmvQqP3wb0AVYDbrHYdmhhYebN2sCjhfs6APe6+9Ml+5eI\niEiDUt+8RERESq+sK2jN7K9m9qGZTSi6b3UzG2Zmb5nZ02a2ajljqifGLmb2rJlNNLM3zeykjMa5\nnJm9ambjzGySmV2WxTiXMrP2hcV1jxduZy7O+hYBZjTOVc3sYTObXPh//7OsxWlmmxZ+jku/Pjez\nkzIY59mFv/UJZnafmS2btRgLcZ5ciPFNMzu5cF+L4ix3u4S7iQVaxc4Chrn7JsCIwu00LQROdfct\ngR2B4wsLyTIVp7t/DXR3958CPwG6m9kuZCzOIicDk/h2hlcW46xvEWAW47weGOLumxP/76eQsTjd\nfWrh59gV2A74EniMDMVZuBZ5LLCtu29NlKoPyVKMAGa2FXAMsAOwDfBrM9uYlsbp7mX9AjYAJhTd\nngKsVfh+bWBKuWNqIt5BwF5ZjhNYHngN2DKLcRIL7YYD3YHHs/r/HXgHWKPOfZmKE1gFeLue+zMV\nZ53Y9gZGZi1OYHVgKnHNsQPwOPCLLMVYiOFg4M6i2+cBf25pnFlohLaWu39Y+P5DYK00gylWeOfv\nSqwMzlycZtbOzMYV4nnW3SeSwTiBa4HewJKi+7IYZ32LALMW54bAx2Z2t5m9bmZ3FGa7ZS3OYocA\n9xe+z0yc7v4ZcDXwLjHbcI67DyNDMRa8CexaKNssD/ySGEC1KM4sJPtveLxFZeKKsZmtCDwCnOzu\nc4sfy0qc7r7Eo4yzHrBbYWFb8eOpx2lmvwY+cvexNNA6IwtxFuzsUXbYlyjf7Vr8YEbi7ABsC9zs\n7tsC86jz8T0jcQJgZh2B/YCH6j6WdpyFUsgpRLVhXWBFMzus+Ji0YyzEMAW4AngaeBIYByyuc0yT\ncWYh2X9oZmsDmNk6wEcpx4OZLUMk+v7uPqhwd+biXMqjN9ETRG00a3HuBOxvZu8Qo7s9zKw/2YsT\nd/+g8N+PifpyN7IX50xgpru/Vrj9MJH8Z2cszqX2BcYUfqaQrZ/n9sBL7v6puy8i1gv9nAz+LN39\nr+6+vbvvDvwLeIsW/iyzkOwHA0cWvj+SqJGnxswMuAuY5O7XFT2UtTg7Lb36bmY/IGqNY8lYnO5+\njrt3cfcNiY/zz7j74WQsTjNb3sxWKny/dBHgBDIWp7vPBt4zs00Kd+0FTCTqzZmJs0hPvi3hQLZ+\nnlOAHc3sB4W/+72ISQSZ+1ma2ZqF/64P/D/gPlr6syzzhYb7idrYAqLB2n8TF0mGE+9UTwOrpnwx\nZBeitjyOSJ5jiRlEWYtza+D1Qpzjgd6F+zMVZ52YdwcGZzFOohY+rvD1JnB2FuMsxLQNcUH+DWI0\nukpG41wB+ARYqei+TMVJXOicSLyx/w1YJmsxFuJ8vhDnOGIWXot/llpUJSKSA1ko44iISIkp2YuI\n5ICSvYhIDijZi4jkgJK9iEgOKNmLiOSAkr2ISA4o2YuI5MD/B+E5SPKoDFh+AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x3869d50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(pct_list, acc_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(np.ceil(total/float(pct)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(235, 44.15015279428845),\n",
+       " (336, 40.06020953527974),\n",
+       " (552, 39.25740524505319),\n",
+       " (572, 38.673035840943356),\n",
+       " (183, 37.18220842079901),\n",
+       " (215, 37.13742681279078)]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_true_top"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(588, 35.02690239879584),\n",
+       " (572, 34.94890732412017),\n",
+       " (235, 34.37281221272536),\n",
+       " (349, 34.12397073041926),\n",
+       " (460, 34.00821955530736),\n",
+       " (142, 33.813749177618874)]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_top"
+   ]
   },
   {
    "cell_type": "code",
@@ -16,9 +219,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#load y_test, y_pred"
-   ]
+   "source": []
   }
  ],
  "metadata": {
