analysed rating stability

--- a/code/ml_pl/svr_greedy_search.ipynb
+++ b/code/ml_pl/svr_greedy_search.ipynb
@@ -9,24 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR (theano.sandbox.cuda): nvcc compiler not found on $PATH. Check your nvcc installation and try again.\n",
+      "ERROR:theano.sandbox.cuda:nvcc compiler not found on $PATH. Check your nvcc installation and try again.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Using Theano implementation of chi-squared kernel\n",
       "Using Theano implementation of chi-squared kernel\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using gpu device 0: GeForce GTX 560 Ti\n"
      ]
     }
    ],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -69,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theano implementation 0.0770526116586 times faster \n",
+      "theano implementation 0.52374155446 times faster \n",
       "\n",
       "all theano kernel matrix elements within 1e-8 of sklearn value: True\n"
      ]
@@ -77,9 +78,9 @@
    ],
    "source": [
     "#testing the kernel\n",
-    "X = np.random.random((1000,10))\n",
+    "X = np.random.random((1000,100))\n",
     "X[0,0] = 0 #check for zeros in histograms\n",
-    "Y = np.random.random((1000,10))\n",
+    "Y = np.random.random((1000,100))\n",
     "t0 = time()\n",
     "sk = chi2_kernel(X,X)\n",
     "sk_time = time()-t0\n",
@@ -1210,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
