added warwick analysis

--- a/code/ml_pl/svr_greedy_search.ipynb
+++ b/code/ml_pl/svr_greedy_search.ipynb
@@ -9,25 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR (theano.sandbox.cuda): nvcc compiler not found on $PATH. Check your nvcc installation and try again.\n",
-      "ERROR:theano.sandbox.cuda:nvcc compiler not found on $PATH. Check your nvcc installation and try again.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using Theano implementation of chi-squared kernel\n",
-      "Using Theano implementation of chi-squared kernel\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -35,14 +27,14 @@
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "import os \n",
+    "os.chdir('D:/projects/video_regression/code/ml_pl')\n",
     "\n",
     "#modeling\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.preprocessing import Normalizer\n",
-    "from multichannel_svr.multichannel_svr2 import multichannel_KFoldCV_opt\n",
     "from multichannel_svr.multichannel_svr import MultiChannelSVR, multichannel_KFoldCV\n",
-    "from multichannel_svr.theano_chi2 import theano_chi2\n",
-    "from sklearn.metrics.pairwise import chi2_kernel\n",
+    "from sklearn.metrics.pairwise import chi2_kernel, linear_kernel\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
     "#data\n",
@@ -1211,7 +1203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.8"
   }
  },
  "nbformat": 4,
