--- a/code/ml_pl/model_hyperopt_search.ipynb
+++ b/code/ml_pl/model_hyperopt_search.ipynb
@@ -152,7 +152,13 @@
     "                 'hof_gamma': hp.lognormal('hof_gamma', 0, 1),\n",
     "                 'mbhx_gamma': hp.lognormal('mbhx_gamma', 0, 1),\n",
     "                 'mbhy_gamma': hp.lognormal('mbhy_gamma', 0, 1),\n",
-    "                 'c3d_gamma': hp.lognormal('c3d_gamma', 0, 1)}\n",
+    "                 'c3d_gamma': hp.lognormal('c3d_gamma', 0, 1), \n",
+    "                 'traj_cw': hp.uniform('traj_cw', 0, 1),\n",
+    "                 'hog_cw': hp.uniform('hog_cw', 0, 1),\n",
+    "                 'hof_cw': hp.uniform('hof_cw', 0, 1),\n",
+    "                 'mbhx_cw': hp.uniform('mbhx_cw', 0, 1),\n",
+    "                 'mbhy_cw': hp.uniform('mbhy_cw', 0, 1),\n",
+    "                 'c3d_cw': hp.uniform('c3d_cw', 0, 1)}\n",
     "\n",
     "ridge_nonlin_space = copy.copy(svr_nonlin_space)\n",
     "ridge_nonlin_space.pop('C', None)\n",
